<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6FA"
    tools:context=".CreateEntry">

    <TextView
        android:id="@+id/textViewCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Agregar entrada al diario"
        android:textSize="24sp"
        android:textColor="#3F51B5"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center" />


    <!-- Campo de entrada de texto -->
    <EditText
        android:id="@+id/editTextContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:autofillHints=""
        android:gravity="top"
        android:hint="@string/escribe_tu_entrada_de_diario"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:textColorHint="#8D6E63"
        android:textColor="#000000"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreate"
        app:layout_constraintBottom_toTopOf="@+id/emojiSpinner"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Selector de emojis -->
    <Spinner
        android:id="@+id/emojiSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextContent" />

    <!-- Vista de imagen -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/emojiSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/vista" />

    <!-- Botón para agregar imagen -->
    <Button
        android:id="@+id/addImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar_imagen"
        android:backgroundTint="#FDF9F9"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón de guardar -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:backgroundTint="#FDF9F9"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/addImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>