<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Título "Mi Diario" centrado -->
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mi_diario"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center" />

    <!-- RecyclerView para mostrar las entradas del diario -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <!-- LinearLayout para los botones Agregar y Buscar -->
    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintBottom_toBottomOf="parent" >

        <!-- Espacio entre los botones (puedes ajustarlo según tus preferencias) -->
        <ImageButton
            android:id="@+id/buttonAddEntry"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/agregar"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/spaceBetweenButtons"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonAddEntry"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Botón Buscar con icono (icono más pequeño) -->
        <ImageButton
            android:id="@+id/buttonSearch"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/buscar"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_search"
            app:layout_constraintStart_toEndOf="@+id/spaceBetweenButtons"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>